# mipt2024f-4-koshelev-a

./: .gitignore  CMakeLists.txt  README.md  config.toml  python-setup.py
barcodes/: .gitignore  mipt2024f-koshelev-a-barcodes.json  via_project.json
data/: tasks.json
docs/: API.md  CODES.md  DEMO.md  INSTALL.md
include/rect/: transform.hpp
include/rect/io/: config_manager.hpp  iohandler.hpp
include/rect/model/: task.hpp
mipt2024f_4_barrect/internal/: __init__.py  gridgen.py  meshfactory.py  warp.py
src/: main.cpp
src/include/: transform.cpp
src/include/io/: config_manager.cpp  iohandler.cpp
